Updated recommendation service and the UI interface

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Service Configuration
 SERVICE_NAME=recommendation-service
-SERVICE_VERSION=1.0.0
+SERVICE_VERSION=2.0.0
 DEBUG=False
 
 # Kafka Configuration
@@ -11,14 +11,29 @@ KAFKA_AUTO_OFFSET_RESET=earliest
 
 # Google Gemini API Configuration
 # Get your API key from: https://ai.google.dev/gemini-api/docs/api-key
-# Set GEMINI_API_KEY or GOOGLE_API_KEY (GOOGLE_API_KEY takes precedence)
-GEMINI_API_KEY=your_gemini_api_key_here
+# IMPORTANT: Add your real API key here to enable AI recommendations!
+GEMINI_API_KEY=AIzaSyDhd7teyCmfrgdKCggA_TWDWSc_GcuNU3w
 # GOOGLE_API_KEY=your_google_api_key_here
 
 # Gemini Model Configuration
 GEMINI_MODEL=gemini-2.0-flash-exp
 MODEL_VERSION=v2.0.0-gemini
 MIN_INTERACTIONS_FOR_RECOMMENDATIONS=3
+
+# Database Configuration
+# For local development (SQLite)
+DATABASE_URL=sqlite:///./recommendation.db
+
+# For production (PostgreSQL)
+# DATABASE_URL=postgresql://recommendation_user:recommendation_pass@localhost:5432/recommendation_db
+
+# Redis Configuration (optional, for caching)
+# REDIS_URL=redis://localhost:6379/0
+
+# JWT Authentication
+JWT_SECRET_KEY=your-secret-key-change-in-production-please
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # API Configuration
 API_V1_PREFIX=/api/v1
