--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.1
 pydantic==2.10.3
 pydantic-settings==2.6.1
+httpx==0.28.1  # For external API calls
 
 # Kafka (Event-driven architecture)
 aiokafka==0.12.0
@@ -11,13 +12,22 @@ kafka-python==2.0.2
 # Google Gemini AI
 google-genai==0.3.0
 
+# Database
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10  # PostgreSQL driver
+redis==5.2.1  # Redis cache
+alembic==1.14.0  # Database migrations
+
+# Authentication
+python-jose[cryptography]==3.3.0  # JWT
+passlib[bcrypt]==1.7.4  # Password hashing
+
 # Data Processing
 numpy==2.2.0
 
 # Testing
 pytest==8.3.4
 pytest-asyncio==0.24.0
-httpx==0.28.1
 
 # Logging and Monitoring
 python-json-logger==3.2.1
